--- a/ExRandomColor/index.html
+++ b/ExRandomColor/index.html
@@ -13,6 +13,6 @@
     <li class="list-group-item">Item 4</li>
     <li class="list-group-item">Item 5</li>
 </ol>
-<script rel="script" src="script.js"/>
+    <script rel="script" src="script.js"></script>
 </body>
 </html>
